--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,7 @@ button:hover .emoji {
 
 .emoji {
   font-size: 32px;
-  margin-right: 5px;
+  /* margin-right: 5px; */
 }
 
 @media (max-width: 600px) {
